# int64grep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  output.txt  rust-analyzer.toml
.github/workflows/: linux_distro.yml  publish.yml  rust.yml
src/: lib.rs  main.rs
