[package]
name = "int64grep"
version = "0.2.2"
edition = "2024"

# Metadata for publishing
authors = ["int_64 <carlosr301101@gmail.com>"]
description = "A tiny Rust crate that provides simple line-based search helpers and a small CLI similar to grep."
license = "MIT"
readme = "README.md"
repository = "https://github.com/carlosr301101/int64grep"
homepage = "https://github.com/carlosr301101/int64grep"
documentation = "https://docs.rs/int64grep"
keywords = ["grep", "search", "cli", "text-processing"]
categories = ["command-line-utilities"]
publish = true

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
